v135
(xx/10/16)

Changes / Improvements / Optimizations:
DietPi-Software | NextCloud: Installation updated to 10.0.1, many thanks to @Bridouz: https://github.com/Fourdee/DietPi/pull/565
DietPi-Software | XU4 Cloudshell LCD Panel: Will automatically be enabled during DietPi-Cloudshell installation.

Bug fixes:
General | XU4 Image: Resolved an issue where a corrupt image was causing power on issues for our users. Many thanks to everyone who helped report, debug and test this issue: https://github.com/Fourdee/DietPi/issues/558
DietPi-Cpu_set | DietPi will no longer attempt to set go_hispeed_load, if it is not supported by kernel (eg: XU4)

-----------------------------------------------------------------------------------------------------------

v134
(16/10/16)

Changes / Improvements / Optimizations:
DietPi-Software | SickRage: Is now available for installation. Automatically downloads and organises your favourite TV shows: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&start=80#p3327
DietPi-Software | LMS / Squeezebox: Now enabled for all devices.
DietPi-Config | Stress Test: Updated, options for a simple CPU burn. Results will also calculate min/max CPU temps. Logs results to file.
General | Avahi Daemon: added to dietpi-process_tool and dietpi-services.
General | NanoPi T2: Bluetooth is now installed by default. This also affects M2, shared image.

Bug fixes:
DietPi-Software | Resolved an issue where a failed libcec package installation, would terminate Kodi installations on XU4. Many thanks to Chris for reporting this: https://github.com/Fourdee/DietPi/issues/554
DietPi-Software | Nginx: Increased worker connections set during installation, to prevent in-page load failures with Nextcloud/Owncloud, and, various other web applications.
DietPi-Set_Hardware | NanoPi M2: Resolved an issue where default soundcard was being set to SPDIFTranscieve instead of HDMI/3.5mm mixer.