@@ -119,6 +119,8 @@ _EOF_
 		local index_eth=$(sed -n 1p /DietPi/dietpi/.network)
 		local index_wlan=$(sed -n 2p /DietPi/dietpi/.network)
 
+		systemctl stop networking.service
+
 		#Kill dhclient
 		killall -w dhclient
 
@@ -313,6 +315,16 @@ _EOF_
 	#/////////////////////////////////////////////////////////////////////////////////////
 	# Main Loop
 	#/////////////////////////////////////////////////////////////////////////////////////
+	#----------------------------------------------------------------
+	#Precaution: Wait for DietPi Ramdisk to finish.
+	# while [ ! -f /DietPi/.ramdisk ]
+	# do
+
+		# sleep 0.3
+
+	# done
+
+	#----------------------------------------------------------------
 	# Init
 	Run_Init
 
@@ -376,14 +388,11 @@ _EOF_
 
 		fi
 
-
 		echo -e " Expanding SD/Flash partition. Please wait..."
 		Partition_SD
 
 		echo -2 > /DietPi/dietpi/.install_stage
 
-		#SystemD. Does not process the ExecStop section of a service, if the same service is still running an ExecStart. So we must manually do what we need before reboot.
-		/DietPi/dietpi/conf/dietpi-service stop
 		reboot
 
 	#----------------------------------------------------------------
