@@ -1,71 +1,0 @@
-#!/bin/bash -e
-### BEGIN INIT INFO
-# Provides:          dietpi-service
-# Required-Start:    $local_fs $network
-# Should-Start:
-# Required-Stop:	 $local_fs
-# Should-Stop:
-# Default-Start:     2 3 4 5
-# Default-Stop:      0 1 6
-# Description:       DietPi boot shutdown reboot.
-### END INIT INFO
-
-#-- commands for update --
-# update-rc.d -f dietpi-service remove
-# rm /etc/init.d/dietpi-service
-# cp /DietPi/dietpi/conf/dietpi-service /etc/init.d/dietpi-service
-# chmod +x /etc/init.d/dietpi-service
-# update-rc.d dietpi-service defaults 00 80
-
-NAME="dietpi-service"
-
-start(){
-
-	#Start DietPi-Ramdisk
-	/boot/dietpi/dietpi-ramdisk 0
-
-	#Start DietPi-Ramlog
-	/DietPi/dietpi/dietpi-ramlog 0
-
-	#start bootup
-	/DietPi/dietpi/boot
-
-}
-
-stop(){
-
-	#Run DietPi logclear/backup if required (from cron job)
-	/etc/cron.hourly/dietpi
-
-	#Stop DietPi-Ramlog
-	/DietPi/dietpi/dietpi-ramlog 1
-
-	#Stop DietPi-Ramdisk
-	/DietPi/dietpi/dietpi-ramdisk 1
-
-}
-
-remove(){
-    stop
-    update-rc.d -f "$NAME" remove
-    rm -fv "$0"
-}
-
-case "$1" in
-	start)
-		start
-	;;
-	stop)
-		stop
-	;;
-	remove)
-		remove
-	;;
-	restart)
-		stop
-		start
-	;;
-	*)
-		echo "Usage: $0 {start|stop}"
-	;;
-esac
