@@ -129,12 +129,12 @@
 	#/////////////////////////////////////////////////////////////////////////////////////
 	# Main Loop
 	#/////////////////////////////////////////////////////////////////////////////////////
-	#Wait for DietPi-RAMDISK, if needed
+	#Precaution: Wait for DietPi Ramdisk to finish
 	while [ ! -f /DietPi/.ramdisk ]
 	do
 
 		/DietPi/dietpi/func/dietpi-notify 2 "Waiting for DietPi-RAMDISK to finish mounting DietPi to RAM..."
-		sleep 2
+		sleep 1
 
 	done
 
