@@ -4,6 +4,7 @@ v135
 Changes / Improvements / Optimizations:
 DietPi-Software | NextCloud: Installation updated to 10.0.1, many thanks to @Bridouz: https://github.com/Fourdee/DietPi/pull/565
 DietPi-Software | XU4 Cloudshell LCD Panel: Will automatically be enabled during DietPi-Cloudshell installation.
+General | DietPi-RAMdisk DietPi-RAMlog and DietPi-Boot have been converted from sysinit to SystemD.
 
 Bug fixes:
 General | XU4 Image: Resolved an issue where a corrupt image was causing power on issues for our users. Many thanks to everyone who helped report, debug and test this issue: https://github.com/Fourdee/DietPi/issues/558
